# Potato_eye_analysis

./: CMakeLists.txt
cmake/: FindLIBIGL.cmake
include/: Kmeans.h  SpectralCluster.h
src/: main.cpp
